Actualiza el contacto

--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <title>Contacto</title>
 </head>
 <body>
-    <h1>gmail@gmail.com</h1>
+    <h1>Correo: gmail@gmail.com</h1>
+        <p>Wasa</p>
 </body>
 </html>
